# rust-lean

hecto/src/: main.rs
log/log01_hello/: Cargo.toml
log/log01_hello/src/: main.rs
mini-kv/: Cargo.toml
mini-kv/src/: Entry.rs  main.rs
sql/sqlx01_hello_world/: .env  Cargo.toml
sql/sqlx01_hello_world/src/: main.rs
sql/sqlx02_user_manage/: Cargo.toml
tokio/tokio01_hello/: Cargo.toml
tokio/tokio01_hello/examples/: hello-redis.rs
tokio/tokio01_hello/src/: frame.rs  main.rs  mini_tokio.rs  waker.rs
web-framework/axume01_example_readme/: Cargo.toml
web-framework/axume02_hello_world/: Cargo.toml
web-framework/axume02_hello_world/src/: main.rs
web-framework/axume03_user_manage/: Cargo.toml
web-framework/axume03_user_manage/src/: main.rs
